allow opening multiple values at once

--- a/src/app/shared/values/values.component.html
+++ b/src/app/shared/values/values.component.html
@@ -1,5 +1,5 @@
-<mat-accordion>
-  <mat-expansion-panel *ngFor="let value of _values || []" >
+<mat-accordion multi="true">
+  <mat-expansion-panel *ngFor="let value of _values || []">
     <mat-expansion-panel-header>
       <mat-panel-title>
         {{value.sensor.name}}
