--- a/src/app/static/dashboard/dashboard.component.html
+++ b/src/app/static/dashboard/dashboard.component.html
@@ -25,9 +25,9 @@
           <mat-card-title>Favoriten</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <p *ngIf="favorites.length === 0">
-            No favorites added yet
-          </p>
+          <mat-list role="list" *ngIf="favorites.length === 0">
+            <mat-list-item role="listitem">Noch keine Favoriten hinzugefügt</mat-list-item>
+          </mat-list>
           <mat-nav-list>
             <a mat-list-item [routerLink]="favorite.url" *ngFor="let favorite of favorites">
               <span [ngSwitch]="favorite.type">
