--- a/src/app/static/entity/entity.component.html
+++ b/src/app/static/entity/entity.component.html
@@ -69,7 +69,7 @@
                   <mat-header-cell *matHeaderCellDef>Zeitstempel</mat-header-cell>
                   <mat-cell *matCellDef="let element">
                     <a [routerLink]="['../../record', element.record.id]">
-                      {{element.record.timestamp | date:'dd.MM.yyyy hh:mm'}}
+                      {{element.record.timestamp | date:'dd.MM.yyyy HH:mm'}}
                     </a>
                   </mat-cell>
                 </ng-container>
