disable placeholder dashboard widgets

--- a/src/app/static/dashboard/dashboard.component.html
+++ b/src/app/static/dashboard/dashboard.component.html
@@ -40,62 +40,62 @@
         </mat-card-content>
       </mat-card>
     </div>
-    <div class="col-md-6" [ngClass]="animateOnRouteEnter">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>Fahrzeugtypen</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <thermo-chart-entity-kind></thermo-chart-entity-kind>
-        </mat-card-content>
-      </mat-card>
-    </div>
+    <!--<div class="col-md-6" [ngClass]="animateOnRouteEnter">-->
+      <!--<mat-card>-->
+        <!--<mat-card-header>-->
+          <!--<mat-card-title>Fahrzeugtypen</mat-card-title>-->
+        <!--</mat-card-header>-->
+        <!--<mat-card-content>-->
+          <!--<thermo-chart-entity-kind></thermo-chart-entity-kind>-->
+        <!--</mat-card-content>-->
+      <!--</mat-card>-->
+    <!--</div>-->
   </div>
 
-  <div class="row">
-    <div class="col-md-6" [ngClass]="animateOnRouteEnter">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>Zuletzt angesehen</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <mat-list>
-            <mat-list-item>
-              <h4 mat-line>Fahrzeugtyp DTZ</h4>
-              <p mat-line>vor 4 Minuten</p>
-            </mat-list-item>
-            <mat-list-item>
-              <h4 mat-line>Fahrzeug 45-654-08</h4>
-              <p mat-line>vor 5 Minuten</p>
-            </mat-list-item>
-            <mat-list-item>
-              <h4 mat-line>Aufnahme 11.12.2017 08:55</h4>
-              <p mat-line>vor 10 Minuten</p>
-            </mat-list-item>
-          </mat-list>
-        </mat-card-content>
-      </mat-card>
-    </div>
-    <div class="col-md-6" [ngClass]="animateOnRouteEnter">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>Neuste Aktivitäten</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <mat-nav-list>
-            <mat-list-item>
-              <p matLine>
-                Kommentar zu Fahrzeug 45-654-08: "Hatte Wassereinbruch am 10.10.2017" von Sebastian Häni
-              </p>
-            </mat-list-item>
-            <mat-list-item>
-              <p matLine>
-                Kommentar zu Aufnahme 11.12.2017 08:55: "Wurde inspiziert. Oben links kein Schaden." von Sebastian Häni
-              </p>
-            </mat-list-item>
-          </mat-nav-list>
-        </mat-card-content>
-      </mat-card>
-    </div>
-  </div>
+  <!--<div class="row">-->
+    <!--<div class="col-md-6" [ngClass]="animateOnRouteEnter">-->
+      <!--<mat-card>-->
+        <!--<mat-card-header>-->
+          <!--<mat-card-title>Zuletzt angesehen</mat-card-title>-->
+        <!--</mat-card-header>-->
+        <!--<mat-card-content>-->
+          <!--<mat-list>-->
+            <!--<mat-list-item>-->
+              <!--<h4 mat-line>Fahrzeugtyp DTZ</h4>-->
+              <!--<p mat-line>vor 4 Minuten</p>-->
+            <!--</mat-list-item>-->
+            <!--<mat-list-item>-->
+              <!--<h4 mat-line>Fahrzeug 45-654-08</h4>-->
+              <!--<p mat-line>vor 5 Minuten</p>-->
+            <!--</mat-list-item>-->
+            <!--<mat-list-item>-->
+              <!--<h4 mat-line>Aufnahme 11.12.2017 08:55</h4>-->
+              <!--<p mat-line>vor 10 Minuten</p>-->
+            <!--</mat-list-item>-->
+          <!--</mat-list>-->
+        <!--</mat-card-content>-->
+      <!--</mat-card>-->
+    <!--</div>-->
+    <!--<div class="col-md-6" [ngClass]="animateOnRouteEnter">-->
+      <!--<mat-card>-->
+        <!--<mat-card-header>-->
+          <!--<mat-card-title>Neuste Aktivitäten</mat-card-title>-->
+        <!--</mat-card-header>-->
+        <!--<mat-card-content>-->
+          <!--<mat-nav-list>-->
+            <!--<mat-list-item>-->
+              <!--<p matLine>-->
+                <!--Kommentar zu Fahrzeug 45-654-08: "Hatte Wassereinbruch am 10.10.2017" von Sebastian Häni-->
+              <!--</p>-->
+            <!--</mat-list-item>-->
+            <!--<mat-list-item>-->
+              <!--<p matLine>-->
+                <!--Kommentar zu Aufnahme 11.12.2017 08:55: "Wurde inspiziert. Oben links kein Schaden." von Sebastian Häni-->
+              <!--</p>-->
+            <!--</mat-list-item>-->
+          <!--</mat-nav-list>-->
+        <!--</mat-card-content>-->
+      <!--</mat-card>-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
